--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "currency-formatter": "^1.5.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
